--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@
     footer {
       text-align: center;
       padding: 2rem;
-      background: var(--green);
+      background: var(--text-dark);
       color: white;
       font-size: 0.9rem;
     }
@@ -223,7 +223,11 @@
     .title h1 {
       font-size: 40px;
     }
+    .title h2 {
+      font-size: 12px;
+      padding-bottom: 10px;
+    }
     .title p {
-      font-size: 14px;
+      font-size: 16px;
     }
 
