--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
       min-height: 100dvh;
       background: var(--beige);
       position: relative;
+      overflow: hidden;
     }
 
     .logo {
